package behavioral.observer.ca4_topic;

public interface TopicListener {
    void listen(TinTuc t);
}
